--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,8 @@
+# database init, supports mysql too
+database=h2
+spring.datasource.schema=classpath*:db/${database}/schema.sql
+spring.datasource.data=classpath*:db/${database}/data.sql
+
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
