--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,8 @@ spring.datasource.data=classpath*:db/${database}/data.sql
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
+spring.jpa.hibernate.ddl-auto=none
+
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
